--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "@types/express": "^4.17.21",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.4.0",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.19.1",
     "supabase": "^1.191.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.12",
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "prisma": "^5.19.1"
   }
 }
