--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.4.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "supabase": "^1.191.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.19.1"
   }
