--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,23 +11,23 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.1",
-    "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "firebase-admin": "^12.4.0",
+    "express": "^4.21.0",
+    "firebase-admin": "^12.5.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "supabase": "^1.191.3",
+    "prisma": "^5.19.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
+    "@types/node": "^22.5.5",
     "@types/node-cron": "^3.0.11",
-    "@types/uuid": "^10.0.0",
-    "prisma": "^5.19.1"
+    "@types/uuid": "^10.0.0"
   }
 }
